--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2003-10-19	Keith Packard	<keithp@keithp.com>
+
+	* configure.ac:
+	* fixesext.pc.in:
+	* protocol:
+	* xfixesproto.h:
+	* xfixeswire.h:
+	Update to version 2.0.
+	Add dependency on xextensions package
+	Add region requests and cursor names
+	
+
 2003-09-16  Anders Carlsson  <andersca@gnome.org>
 
 	* configure.ac:
